[package]
name = "bevy_rapier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
#bevy_rapier2d = "0.21.0"
bevy_rapier2d = { version = "0.21.0", features = ["simd-stable", "debug-render-2d"] }
bevy_prototype_lyon = "0.8.0"
bevy_rapier_collider_gen = "0.1.2"
bevy_framepace = "0.12.1"
rodio = "0.17.1"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.99"

[profile.dev.package.bevy_rapier2d]
opt-level = 3
